fix: overflow hiden

--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,7 @@ body {
     box-sizing: border-box;
     background-color: #f4f4f4; 
     color: #333; 
+    overflow-x: hidden;
 }
 *, *::before, *::after {
     box-sizing: inherit;
